feat: course review and bug fixes